--- a/CacelApp/Views/MainWindow.xaml
+++ b/CacelApp/Views/MainWindow.xaml
@@ -50,7 +50,8 @@
         </Style>
     </Window.Resources>
 
-    <materialDesign:DialogHost Identifier="RootDialogHost" CloseOnClickAway="False">
+    <materialDesign:DialogHost Identifier="RootDialogHost" CloseOnClickAway="False"
+                                 materialDesign:DialogHost.DialogContentTemplate="{StaticResource AppDialogTemplate}">
 
         <Grid>
             <Grid.ColumnDefinitions>
@@ -213,45 +214,7 @@
             </Grid>
         </Grid>
 
-        <materialDesign:DialogHost.DialogContentTemplate>
-            <DataTemplate>
-                <Grid Width="300" Margin="16" d:DataContext="{d:DesignInstance Type=shared:DialogConfig, IsDesignTimeCreatable=True}">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-
-                    <StackPanel Orientation="Horizontal" Grid.Row="0">
-                        <materialDesign:PackIcon Kind="{Binding IconKind}" 
-                                                 Foreground="{Binding AccentColor}" 
-                                                 Width="30" Height="30" Margin="0,0,10,0"/>
-                        <TextBlock Text="{Binding Title}" 
-                                   Style="{StaticResource MaterialDesignHeadline6TextBlock}"/>
-                    </StackPanel>
-
-                    <TextBlock Text="{Binding Message}" 
-                               Grid.Row="1" Margin="0,10,0,20" TextWrapping="Wrap"/>
-
-                    <StackPanel Orientation="Horizontal" 
-                                Grid.Row="2" 
-                                HorizontalAlignment="Right">
-
-                        <Button Style="{StaticResource MaterialDesignFlatButton}"
-                                Content="{Binding SecondaryText}"
-                                Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
-                                CommandParameter="False"
-                                Visibility="{Binding SecondaryText, Converter={StaticResource InverseBooleanToVisibilityConverter}}"/>
-
-                        <Button Style="{StaticResource MaterialDesignRaisedButton}"
-                                Content="{Binding PrimaryText}"
-                                Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
-                                CommandParameter="True"
-                                Margin="8,0,0,0"/>
-                    </StackPanel>
-                </Grid>
-            </DataTemplate>
-        </materialDesign:DialogHost.DialogContentTemplate>
+        <!-- Using global AppDialogTemplate for consistent dialogs -->
 
     </materialDesign:DialogHost>
 </Window>
