--- a/CacelApp/Views/MainWindow.xaml
+++ b/CacelApp/Views/MainWindow.xaml
@@ -120,7 +120,7 @@
                                                      VerticalAlignment="Center" Margin="0,0,10,0" Foreground="White"/>
 
                             <StackPanel Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left">
-                                <TextBlock Text="PIXEL ROAR" FontWeight="Bold" FontSize="12" Foreground="White"/>
+                                <TextBlock Text="{Binding UsuarioNombreCompleto}" FontWeight="Bold" FontSize="12" Foreground="White"/>
                                 <TextBlock Text="{Binding UsuarioEmail}" Opacity="0.7" FontSize="10" Foreground="LightGray"/>
                             </StackPanel>
 
