--- a/CacelApp/Views/Modulos/Balanza/Balanza.xaml
+++ b/CacelApp/Views/Modulos/Balanza/Balanza.xaml
@@ -5,18 +5,53 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:CacelApp.Views.Modulos.Balanza"
+             xmlns:controls="clr-namespace:CacelApp.Shared.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="900" d:DesignWidth="1400" 
              d:DataContext="{d:DesignInstance Type=local:BalanzaModel, IsDesignTimeCreatable=True}"
              Background="{DynamicResource MaterialDesignPaper}">
 
+    <UserControl.Resources>
+        <!-- Template para columna de Estado -->
+        <DataTemplate x:Key="EstadoTemplate">
+            <materialDesign:PackIcon 
+                Kind="{Binding Item.EstadoOK, Converter={StaticResource BoolToTickCrossConverter}}"
+                Foreground="{Binding Item.EstadoOK, Converter={StaticResource BoolToGreenRedConverter}}"
+                Width="24" 
+                Height="24"
+                HorizontalAlignment="Center"
+                ToolTip="{Binding Item.EstadoOK, Converter={StaticResource BoolToEstadoTextConverter}}"/>
+        </DataTemplate>
+
+        <!-- Template para columna de Acciones -->
+        <DataTemplate x:Key="AccionesTemplate">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Style="{StaticResource MaterialDesignIconButton}"
+                        ToolTip="Editar"
+                        Command="{Binding DataContext.EditarCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                        CommandParameter="{Binding Item}"
+                        Width="30" Height="30"
+                        Margin="2,0">
+                    <materialDesign:PackIcon Kind="Pencil" Width="18" Height="18"/>
+                </Button>
+                <Button Style="{StaticResource MaterialDesignIconButton}"
+                        ToolTip="Eliminar"
+                        Command="{Binding DataContext.EliminarCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                        CommandParameter="{Binding Item}"
+                        Width="30" Height="30"
+                        Margin="2,0"
+                        Foreground="{DynamicResource ValidationErrorBrush}">
+                    <materialDesign:PackIcon Kind="TrashCan" Width="18" Height="18"/>
+                </Button>
+            </StackPanel>
+        </DataTemplate>
+    </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0" Background="{DynamicResource PrimaryMidBrush}" Padding="20,15">
@@ -118,24 +153,13 @@
                     </StackPanel>
 
                     <StackPanel Grid.Column="6" Orientation="Horizontal" VerticalAlignment="Bottom" Margin="0,0,0,0">
-
-                        <TextBox Text="{Binding GlobalSearchTerm, UpdateSourceTrigger=PropertyChanged}"
-                                  materialDesign:TextFieldAssist.LeadingIcon="Magnify"
-                                 materialDesign:HintAssist.Hint="Buscar en tabla..."
-                                 materialDesign:TextFieldAssist.HasClearButton="True"
-                                 Width="180" Margin="0,0,15,0"
-                                 VerticalAlignment="Bottom"
-                                 Style="{StaticResource MaterialDesignFloatingHintTextBox}">
-
-                        </TextBox>
-
                         <Button Command="{Binding BuscarCommand}"
                                 Style="{StaticResource MaterialDesignRaisedButton}"
                                 materialDesign:ButtonAssist.CornerRadius="5"
                                 Background="{StaticResource MaterialDesign.Brush.Primary}"
                                 Padding="15,8" Margin="0,0,10,0">
                             <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Filter" Margin="0,0,8,0" VerticalAlignment="Center"/>
+                                <materialDesign:PackIcon Kind="Filter" Margin="0,0,8,0" VerticalAlignment="Center" Foreground="White"/>
                                 <TextBlock Text="Aplicar Filtros" VerticalAlignment="Center" Foreground="White"/>
                             </StackPanel>
                         </Button>
@@ -145,7 +169,7 @@
                                 materialDesign:ButtonAssist.CornerRadius="5"
                                 Padding="20,8" Margin="0,0,10,0">
                             <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Plus" Margin="0,0,8,0" VerticalAlignment="Center"/>
+                                <materialDesign:PackIcon Kind="Plus" Margin="0,0,8,0" VerticalAlignment="Center" Foreground="White"/>
                                 <TextBlock Text="Nuevo" VerticalAlignment="Center" Foreground="White"/>
                             </StackPanel>
                         </Button>
@@ -164,225 +188,11 @@
             </StackPanel>
         </Border>
 
-        <Border Grid.Row="2" Background="{DynamicResource MaterialDesignCardBackground}" 
-                Margin="0,0,0,0"
-                Padding="20,10" >
-            <TextBlock Text="Lista de Registros" 
-                       FontSize="14" 
-                       FontWeight="SemiBold"
-                       Foreground="{DynamicResource MaterialDesignBody}"/>
-        </Border>
+        <!-- Tabla Reutilizable con Paginación Integrada -->
+        <controls:DataTableControl 
+            Grid.Row="2"
+            DataContext="{Binding TableViewModel}"
+            Columns="{Binding DataContext.TableColumns, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
 
-            <DataGrid Grid.Row="3"
-              ItemsSource="{Binding RegistrosPaginated}"
-              SelectedItem="{Binding SelectedRegistro}"
-              IsReadOnly="True"
-              AutoGenerateColumns="False"
-              CanUserAddRows="False"
-              CanUserDeleteRows="False"
-              CanUserReorderColumns="False"
-              CanUserResizeRows="False"
-              ColumnHeaderHeight="40"
-              RowHeight="50" 
-              Background="{DynamicResource MaterialDesignCardBackground}"
-              Margin="0,0,0,0" GridLinesVisibility="None"
-              materialDesign:DataGridAssist.CellPadding="10,8"
-              materialDesign:DataGridAssist.ColumnHeaderPadding="10,8">
-                <DataGrid.CellStyle>
-                    <Style TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource MaterialDesignDataGridCell}">
-                        <Setter Property="VerticalAlignment" Value="Center"/>
-                        <Setter Property="Padding" Value="10,0"/>
-                        <Setter Property="BorderThickness" Value="0"/>
-                        <Setter Property="Background" Value="Transparent"/>
-                    </Style>
-                </DataGrid.CellStyle>
-
-                <DataGrid.RowStyle>
-                    <Style TargetType="{x:Type DataGridRow}" BasedOn="{StaticResource MaterialDesignDataGridRow}">
-                        <Setter Property="VerticalAlignment" Value="Center"/>
-                        <Setter Property="VerticalContentAlignment" Value="Center"/>
-                        <Setter Property="BorderThickness" Value="0,0,0,1"/>
-                        <Setter Property="BorderBrush" Value="{DynamicResource MaterialDesignDivider}"/>
-                        <Setter Property="Background" Value="Transparent"/>
-                    </Style>
-                </DataGrid.RowStyle>
-                <DataGrid.Columns>
-
-                <DataGridTemplateColumn Header="N°" Width="60" IsReadOnly="True">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock VerticalAlignment="Center" 
-                                       HorizontalAlignment="Center"
-                                       Text="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGridRow}}, 
-                                                      Path=Item.Index}"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-
-                <DataGridTextColumn Header="CÓDIGO" 
-                                    Binding="{Binding Codigo}" 
-                                    Width="100"
-                                    IsReadOnly="True"/>
-                <DataGridTextColumn Header="PLACA" 
-                                    Binding="{Binding Placa}" 
-                                    Width="80"
-                                    IsReadOnly="True"/>
-                <DataGridTextColumn Header="REFERENCIA" 
-                                    Binding="{Binding Referencia}" 
-                                    Width="1.5*"   IsReadOnly="True"/>
-                <DataGridTextColumn Header="FECHA" 
-                                    Binding="{Binding Fecha, StringFormat='dd/MM/yyyy'}" 
-                                    Width="100"
-                                    IsReadOnly="True"/>
-                <DataGridTextColumn Header="P. BRUTO" 
-                                    Binding="{Binding PesoBruto, StringFormat='N2'}" 
-                                    Width="90"
-                                    IsReadOnly="True">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="HorizontalAlignment" Value="Right"/>
-                            <Setter Property="Margin" Value="5,0"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="P. TARA" 
-                                    Binding="{Binding PesoTara, StringFormat='N2'}" 
-                                    Width="90"
-                                    IsReadOnly="True">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="HorizontalAlignment" Value="Right"/>
-                            <Setter Property="Margin" Value="5,0"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="P. NETO" 
-                                    Binding="{Binding PesoNeto, StringFormat='N2'}" 
-                                    Width="90"
-                                    IsReadOnly="True">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="HorizontalAlignment" Value="Right"/>
-                            <Setter Property="Margin" Value="5,0"/>
-                            <Setter Property="FontWeight" Value="SemiBold"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="OPERACIÓN" 
-                                    Binding="{Binding Operacion}" 
-                                    Width="1.2*" IsReadOnly="True"/>
-                <DataGridTextColumn Header="MONTO" 
-                                    Binding="{Binding Monto, StringFormat='C2'}" 
-                                    Width="100"
-                                    IsReadOnly="True">
-                    <DataGridTextColumn.ElementStyle>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="HorizontalAlignment" Value="Right"/>
-                            <Setter Property="Margin" Value="5,0"/>
-                        </Style>
-                    </DataGridTextColumn.ElementStyle>
-                </DataGridTextColumn>
-                <DataGridTextColumn Header="USUARIO" 
-                                    Binding="{Binding Usuario}" 
-                                    Width="*" IsReadOnly="True"/>
-
-                <DataGridTemplateColumn Header="ESTADO" Width="70" IsReadOnly="True">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Grid HorizontalAlignment="Center">
-                                <materialDesign:PackIcon Kind="CheckCircle"
-                                                         Foreground="#4CAF50"
-                                                         Width="20"
-                                                         Height="20"
-                                                         Visibility="{Binding EstadoOK, Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                                <materialDesign:PackIcon Kind="CloseCircle"
-                                                         Foreground="#F44336"
-                                                         Width="20"
-                                                         Height="20"
-                                                         Visibility="{Binding EstadoOK, Converter={StaticResource InverseBooleanToVisibilityConverter}}"/>
-                            </Grid>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-
-                <DataGridTemplateColumn Header="ACCIONES" Width="120" IsReadOnly="True">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                <Button Style="{StaticResource MaterialDesignIconButton}" 
-                        ToolTip="Editar Registro"
-                        Margin="0,0,5,0"
-                        Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=DataContext.EditarCommand}"
-                        CommandParameter="{Binding}">
-                                    <materialDesign:PackIcon Kind="Pencil" Foreground="#2196F3" Width="20" Height="20"/>
-                                </Button>
-
-                                <Button Style="{StaticResource MaterialDesignIconButton}" 
-                        ToolTip="Eliminar Registro"
-                        Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}, Path=DataContext.EliminarCommand}"
-                        CommandParameter="{Binding}">
-                                    <materialDesign:PackIcon Kind="TrashCanOutline" Foreground="#F44336" Width="20" Height="20"/>
-                                </Button>
-                            </StackPanel>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-            </DataGrid.Columns>
-        </DataGrid>
-        
-        <Border Grid.Row="4" Background="{DynamicResource MaterialDesignCardBackground}"
-                BorderBrush="{DynamicResource MaterialDesignDividerBrush}"
-                BorderThickness="0,1,0,0"
-                Padding="20,10" CornerRadius="0,0,12,12">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-
-                <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center">
-                    <TextBlock Text="{Binding TotalRegistros, StringFormat='Registros cargados: {0}'}"
-                               FontSize="12"
-                               Margin="0,0,30,0"
-                               Foreground="{DynamicResource MaterialDesignBodyLight}"/>
-                    <TextBlock Text="{Binding MontoTotal, StringFormat='Monto total: {0:C2}'}"
-                               FontSize="12"
-                               Margin="0,0,30,0"
-                               Foreground="{DynamicResource MaterialDesignBodyLight}"/>
-                    <TextBlock FontSize="12" Foreground="{DynamicResource MaterialDesignBodyLight}">
-                        <Run Text="Peso neto promedio: "/>
-                        <Run Text="{Binding PesoNetoPromedio, StringFormat=N2}"/>
-                        <Run Text=" kg"/>
-                    </TextBlock>
-                </StackPanel>
-
-                <StackPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
-                    <TextBlock Text="Registros por pág.:" VerticalAlignment="Center" Margin="0,0,5,0" Opacity="0.7"/>
-
-                    <ComboBox ItemsSource="{Binding PageSizes}"
-                              SelectedItem="{Binding PageSize, Mode=TwoWay}"
-                              Width="60" Margin="0,0,15,0" VerticalAlignment="Center"
-                              Style="{StaticResource MaterialDesignComboBox}"/>
-
-                    <TextBlock Text="Página:" VerticalAlignment="Center" Margin="0,0,5,0" Opacity="0.7"/>
-
-                    <Button Style="{StaticResource MaterialDesignIconButton}" 
-                            Command="{Binding PreviousPageCommand}" 
-                            ToolTip="Anterior">
-                        <materialDesign:PackIcon Kind="ArrowLeft"/>
-                    </Button>
-
-                    <TextBlock Text="{Binding CurrentPage}" VerticalAlignment="Center" FontWeight="Bold" Margin="10,0,0,0"/>
-                    <TextBlock Text="/" VerticalAlignment="Center" Opacity="0.7" Margin="5,0"/>
-                    <TextBlock Text="{Binding TotalPages}" VerticalAlignment="Center" Margin="0,0,10,0" Opacity="0.7"/>
-
-                    <Button Style="{StaticResource MaterialDesignIconButton}" 
-                            Command="{Binding NextPageCommand}" 
-                            ToolTip="Siguiente">
-                        <materialDesign:PackIcon Kind="ArrowRight"/>
-                    </Button>
-                </StackPanel>
-            </Grid>
-        </Border>
     </Grid>
 </UserControl>
