--- a/CacelApp/Views/Modulos/Balanza/Balanza.xaml
+++ b/CacelApp/Views/Modulos/Balanza/Balanza.xaml
@@ -23,28 +23,8 @@
                 ToolTip="{Binding Item.EstadoOK, Converter={StaticResource BoolToEstadoTextConverter}}"/>
         </DataTemplate>
 
-        <!-- Template para columna de Acciones -->
-        <DataTemplate x:Key="AccionesTemplate">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Style="{StaticResource MaterialDesignIconButton}"
-                        ToolTip="Editar"
-                        Command="{Binding DataContext.EditarCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                        CommandParameter="{Binding Item}"
-                        Width="30" Height="30"
-                        Margin="2,0">
-                    <materialDesign:PackIcon Kind="Pencil" Width="18" Height="18"/>
-                </Button>
-                <Button Style="{StaticResource MaterialDesignIconButton}"
-                        ToolTip="Eliminar"
-                        Command="{Binding DataContext.EliminarCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                        CommandParameter="{Binding Item}"
-                        Width="30" Height="30"
-                        Margin="2,0"
-                        Foreground="{DynamicResource ValidationErrorBrush}">
-                    <materialDesign:PackIcon Kind="TrashCan" Width="18" Height="18"/>
-                </Button>
-            </StackPanel>
-        </DataTemplate>
+        <!-- Template para columna de Acciones - Ya no es necesario, se genera dinámicamente -->
+        <!-- Los botones de acción ahora se configuran en BalanzaModel.cs -->
     </UserControl.Resources>
 
     <Grid>
