--- a/CacelApp/Views/Modulos/Pesajes/Pesajes.xaml
+++ b/CacelApp/Views/Modulos/Pesajes/Pesajes.xaml
@@ -18,25 +18,25 @@
                 <Border.Style>
                     <Style TargetType="Border">
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding Item.pes_status}" Value="1">
+                            <DataTrigger Binding="{Binding Item.Pes_status}" Value="1">
                                 <Setter Property="Background" Value="#E8F5E9"/>
                             </DataTrigger>
-                            <DataTrigger Binding="{Binding Item.pes_status}" Value="2">
+                            <DataTrigger Binding="{Binding Item.Pes_status}" Value="2">
                                 <Setter Property="Background" Value="#FFF3E0"/>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </Border.Style>
-                <TextBlock Text="{Binding Item.pes_status_des}" 
+                <TextBlock Text="{Binding Item.Pes_status_des}" 
                            FontSize="11" 
                            FontWeight="SemiBold">
                     <TextBlock.Style>
                         <Style TargetType="TextBlock">
                             <Style.Triggers>
-                                <DataTrigger Binding="{Binding Item.pes_status}" Value="1">
+                                <DataTrigger Binding="{Binding Item.Pes_status}" Value="1">
                                     <Setter Property="Foreground" Value="#2E7D32"/>
                                 </DataTrigger>
-                                <DataTrigger Binding="{Binding Item.pes_status}" Value="2">
+                                <DataTrigger Binding="{Binding Item.Pes_status}" Value="2">
                                     <Setter Property="Foreground" Value="#EF6C00"/>
                                 </DataTrigger>
                             </Style.Triggers>
